PROJECT(MoonTalk_Server)	
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)   
SET(CMAKE_CXX_FLAGS_DEBUG " -Wall") 
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./build/)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
AUX_SOURCE_DIRECTORY(src/login_server LS_DIR_SRCS)
AUX_SOURCE_DIRECTORY(src/msg_server MS_DIR_SRCS)
ADD_SUBDIRECTORY( src/base)
ADD_SUBDIRECTORY( src/net)		
ADD_SUBDIRECTORY( src/protobuf)	
ADD_EXECUTABLE(Login_Server ${LS_DIR_SRCS})
TARGET_LINK_LIBRARIES( Login_Server base net proto protobuf pthread mysqlclient)
ADD_EXECUTABLE(Msg_Server ${MS_DIR_SRCS})
TARGET_LINK_LIBRARIES( Msg_Server base net proto protobuf pthread mysqlclient)